--- a/templates/method.mustache
+++ b/templates/method.mustache
@@ -11,7 +11,7 @@
     if(parameters === undefined) {
         parameters = {};
     }
-    {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} deferred = {{#isNode}}Q{{/isNode}}{{^isNode}}$q{{/isNode}}.defer();
+    {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} deferred = new Promise();
     {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} domain = this.domain,  path = '{{&path}}';
     {{#isES6}}let{{/isES6}}{{^isES6}}var{{/isES6}} body = {}, queryParameters = {}, headers = {}, form = {};
 
@@ -90,7 +90,7 @@
     {{/parameters}}
     queryParameters = mergeQueryParams(parameters, queryParameters);
 
-    this.request('{{method}}', domain + path, parameters, body, headers, queryParameters, form, deferred);
+    //this.request('{{method}}', domain + path, parameters, body, headers, queryParameters, form, deferred);
 
-    return deferred.promise;
+    return this.request('{{method}}', domain + path, parameters, body, headers, queryParameters, form, deferred);
  };
