修复baseURL的问题

--- a/templates/method.mustache
+++ b/templates/method.mustache
@@ -92,5 +92,5 @@
 
     //this.request('{{method}}', domain + path, parameters, body, headers, queryParameters, form, deferred);
 
-    return this.request('{{method}}', domain + path, parameters, body, headers, queryParameters, form, deferred);
+    return this.request('{{method}}', path, parameters, body, headers, queryParameters, form, deferred);
  };
